@@ -31,6 +31,7 @@ export(get_scores)
 export(icm_to_ppm)
 export(log_string_pval)
 export(make_DBscores)
+export(mask_ranges)
 export(mask_seqs)
 export(merge_motifs)
 export(merge_similar)
