@@ -7,6 +7,10 @@ NEW FEATURES
       Trifonov, or DUST algorithms, calculate sequence complexity in sliding
       windows.
 
+    o New function, mask_ranges(): Similarly to mask_seqs(), mask specific
+      positions in a XStringSet object by replacing the letters with a specific
+      filler character.
+
     o New function, motif_range(): Get the min/max range of possible logodds
       scores for a motif.
 
